Bug 663547 - Make ecma_5/Object/* not dog-slow any more by disabling a particularly expensive assertion when they run.  r=luke